--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,8 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion '1.4.20'
-        kotlinCompilerExtensionVersion '1.0.0-alpha08'
+        kotlinCompilerVersion "$kotlin_version"
+        kotlinCompilerExtensionVersion "$compose_version"
     }
 }
 
@@ -48,23 +48,25 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.compose.ui:ui:1.0.0-alpha09'
+    implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
-    implementation 'androidx.compose.ui:ui-tooling:1.0.0-alpha09'
+    implementation "androidx.compose.ui:ui-tooling:$compose_version"
     // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
-    implementation 'androidx.compose.foundation:foundation:1.0.0-alpha09'
+    implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
-    implementation 'androidx.compose.material:material:1.0.0-alpha09'
+    implementation "androidx.compose.material:material:$compose_version"
     // Material design icons
-    implementation 'androidx.compose.material:material-icons-core:1.0.0-alpha09'
-    implementation 'androidx.compose.material:material-icons-extended:1.0.0-alpha09'
+//    implementation "androidx.compose.material:material-icons-core:$compose_version"
+//    implementation "androidx.compose.material:material-icons-extended:$compose_version"
     // Integration with observables
-    implementation 'androidx.compose.runtime:runtime-livedata:1.0.0-alpha09'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.0.0-alpha09'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01'
+//    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+//    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
+//    implementation "androidx.compose.runtime:runtime:$compose_version"
+//    implementation "androidx.compose.compiler:compiler:$compose_version"
+
+//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01'
     // UI Tests
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.0.0-alpha09'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
