--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha04"
     // Material design icons
 //    implementation "androidx.compose.material:material-icons-core:$compose_version"
 //    implementation "androidx.compose.material:material-icons-extended:$compose_version"
