Add new recipe draft page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,18 +57,9 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
+    implementation 'com.google.android.material:material:1.2.1'
     // Navigation
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha04"
-    // Material design icons
-//    implementation "androidx.compose.material:material-icons-core:$compose_version"
-//    implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    // Integration with observables
-//    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
-//    implementation "androidx.compose.runtime:runtime-rxjava2:$compose_version"
-//    implementation "androidx.compose.runtime:runtime:$compose_version"
-//    implementation "androidx.compose.compiler:compiler:$compose_version"
-
-//    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0-rc01'
     // UI Tests
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     testImplementation 'junit:junit:4.13.1'
