--- a/build.gradle
+++ b/build.gradle
@@ -9,9 +9,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha03"
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha04'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.jaredsburrows:gradle-license-plugin:0.8.90'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
