--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:name=".MainActivity"
             android:configChanges="keyboard|keyboardHidden|screenSize|smallestScreenSize|screenLayout|orientation"
             android:label="@string/app_name"
+            android:theme="@style/Theme.Burr"
             android:supportsPictureInPicture="true"
             android:launchMode="singleInstance"
             android:windowSoftInputMode="adjustResize">
