Different app id for debug so it won't override release version on phones

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
+
+        debug {
+            debuggable true
+            applicationIdSuffix ".debug"
+            versionNameSuffix "-debug"
+        }
     }
 
     buildFeatures {
