--- a/app/build.gradle
+++ b/app/build.gradle
@@ -136,12 +136,11 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // UI Tests
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     testImplementation 'junit:junit:4.13.1'
-//    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
 
 task ktlint(type: JavaExec, group: "verification") {
