--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,6 +19,8 @@ jobs:
         java-version: 1.11
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+    - name: Create empty keystore
+      run: cat > keystore.properties
     - name: KTLint
       run: ./gradlew ktlint
     - name: Unit Tests
