--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,12 @@ android {
         exclude 'META-INF/LGPL2.1'
         exclude("META-INF/*.kotlin_module")
     }
+
+    sourceSets {
+        // Adds exported schema location as test app assets.
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
+    }
+
 }
 
 licenseReport {
@@ -136,6 +142,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    androidTestImplementation "androidx.room:room-testing:2.2.6"
+
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
     // UI Tests
