Removed internet permission!

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         package="com.omelan.cofi">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission
+            android:name="android.permission.ACCESS_NETWORK_STATE"
+            tools:node="remove" />
+
     <application
             android:allowBackup="true"
             android:fullBackupOnly="true"
