--- a/.github/workflows/Emulator.yml
+++ b/.github/workflows/Emulator.yml
@@ -32,6 +32,7 @@ jobs:
         with:
         # API level of the platform and system image - e.g. 23 for Android Marshmallow, 29 for Android 10
           api-level: 30
+          arch: x86_64
         # custom script to run - e.g. `./gradlew connectedCheck`
           script: './gradlew connectedCheck'
       - name: Grant execute permission for gradlew
