--- a/.github/workflows/Emulator.yml
+++ b/.github/workflows/Emulator.yml
@@ -28,6 +28,10 @@ jobs:
         run: chmod +x gradlew
       - name: Create empty keystore
         run: echo "storeFile=/" > keystore.properties
+      - name: set up JDK 1.11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.11
       - name: Android Emulator Runner
       # You may pin to the exact commit or the version.
       # uses: ReactiveCircus/android-emulator-runner@08b092e904025fada32a01b711af1e7ff7b7a4a3
@@ -39,5 +43,3 @@ jobs:
           target: google_apis
         # custom script to run - e.g. `./gradlew connectedCheck`
           script: './gradlew connectedFullDebugAndroidTest'
-      - name: Android Instrumantation Tests
-        run: ./gradlew 
