Changes to intent filter required to publish instant app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         package="com.omelan.cofi">
+
     <queries>
         <intent>
             <action android:name="android.intent.action.SENDTO" />
@@ -35,7 +36,8 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter>
+            <intent-filter
+                    android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
@@ -46,6 +48,11 @@
                         android:pathPattern=".*"
                         android:pathPrefix="/"
                         android:scheme="https" />
+                <data
+                        android:host="cofi.omelan.com"
+                        android:pathPattern=".*"
+                        android:pathPrefix="/"
+                        android:scheme="http" />
             </intent-filter>
         </activity>
     </application>
