--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,3 @@
 theme: jekyll-theme-cayman
 title: [Cofi ☕️]
-description: [A free, open brew timer]
-show_downloads: [true]
+description: [A free and open brew timer]
