--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: [Cofi ☕️]
-description: [A free and open brew timer]
+title: Cofi ☕️
+description: A free and open brew timer
 include: [".well-known"]
