--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,7 @@ android {
         applicationId "com.omelan.cofi"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 2
-        versionName "1.0"
+        versionName "0.5.${versionCode}"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
@@ -63,12 +62,12 @@ android {
         instant {
             dimension "version"
             versionNameSuffix "-instant"
-            versionCode 1
+            versionCode 7
             minSdkVersion 26
         }
         full {
             dimension "version"
-            versionCode 2
+            versionCode 8
         }
     }
 
@@ -143,13 +142,13 @@ dependencies {
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
     // Navigation
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha04"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha05"
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
     implementation 'dev.chrisbanes.accompanist:accompanist-insets:0.4.1'
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha05"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
     //Room
     def room_version = "2.2.6"
 
