--- a/.github/workflows/Emulator.yml
+++ b/.github/workflows/Emulator.yml
@@ -41,5 +41,6 @@ jobs:
           api-level: 30
           arch: x86_64
           target: google_apis
+          emulator-build: 7075546
         # custom script to run - e.g. `./gradlew connectedCheck`
           script: './gradlew connectedFullDebugAndroidTest'
