--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
         applicationId "com.omelan.cofi"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 16
-        versionName "0.5"
+        versionCode 18
+        versionName "0.9.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
@@ -64,12 +64,13 @@ android {
         instant {
             dimension "version"
             versionCode android.defaultConfig.versionCode - 1
-            versionNameSuffix ".$versionCode-instant"
+            versionNameSuffix "-instant ($versionCode)"
             minSdkVersion 26
         }
         full {
             dimension "version"
-            versionNameSuffix ".$versionCode"
+            versionCode android.defaultConfig.versionCode
+            versionNameSuffix "($versionCode)"
         }
     }
 
