--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/Cofi" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 title: Cofi
@@ -22,14 +22,14 @@ include: [".well-known"]
 # Build settings
 markdown: kramdown
 theme: minima
-author:
-  name: Leon Omelan
-  email: "rozpierog@gmail.com"
-minima:
-  skin: dark
-  social_links:
-    twitter: CofiTimer
-    github: rozPierog
+# author:
+#   name: Leon Omelan
+#   email: "rozpierog@gmail.com"
+# minima:
+#   skin: dark
+#   social_links:
+#     twitter: CofiTimer
+#     github: rozPierog
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
