--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,9 +149,11 @@ dependencies {
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
-    implementation 'dev.chrisbanes.accompanist:accompanist-insets:0.4.1'
+    implementation 'dev.chrisbanes.accompanist:accompanist-insets:0.5.1'
 
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha06"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha02"
+    implementation "androidx.activity:activity-compose:1.3.0-alpha02"
     //Room
     def room_version = "2.2.6"
 
