Trying to update to compose beta01

--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.0-alpha12'
+        compose_version = '1.0.0-beta01'
         kotlin_version = '1.4.30'
     }
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        jcenter() // remove me after https://issues.sonatype.org/browse/OSSRH-64436 is resolved
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-alpha07'
+        classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jaredsburrows:gradle-license-plugin:0.8.90'
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +21,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
