--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,15 +145,16 @@ dependencies {
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
     // Navigation
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha08"
+    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
-    implementation 'dev.chrisbanes.accompanist:accompanist-insets:0.6.0'
+    implementation 'com.google.accompanist:accompanist-insets:0.7.0'
+    implementation "com.google.accompanist:accompanist-flowlayout:0.7.0"
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha07"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha03"
-    implementation "androidx.activity:activity-compose:1.3.0-alpha03"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha05"
+    implementation "androidx.activity:activity-compose:1.3.0-alpha05"
     //Room
     def room_version = "2.2.6"
 
