--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+                arguments += ["room.schemaLocation":
+                                      "$projectDir/schemas".toString()]
             }
         }
         resConfigs "en", "pl"
@@ -136,7 +137,7 @@ dependencies {
 
     instantImplementation('com.google.android.gms:play-services-instantapps:17.0.0')
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
@@ -145,23 +146,23 @@ dependencies {
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
     // Navigation
-    implementation "androidx.navigation:navigation-compose:1.0.0-alpha09"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha01"
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
-    implementation 'com.google.accompanist:accompanist-insets:0.7.0'
-    implementation "com.google.accompanist:accompanist-flowlayout:0.7.0"
+    implementation 'com.google.accompanist:accompanist-insets:0.10.0'
+    implementation "com.google.accompanist:accompanist-flowlayout:0.10.0"
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-alpha08"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha05"
-    implementation "androidx.activity:activity-compose:1.3.0-alpha05"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07"
+    implementation "androidx.activity:activity-compose:1.3.0-alpha08"
     //Room
-    def room_version = "2.2.6"
+    def room_version = "2.3.0"
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    androidTestImplementation "androidx.room:room-testing:2.2.6"
+    androidTestImplementation "androidx.room:room-testing:$room_version"
 
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
