--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,6 +153,7 @@ dependencies {
     // Jetpack Utils
     implementation 'com.google.accompanist:accompanist-insets:0.11.1'
     implementation "com.google.accompanist:accompanist-flowlayout:0.11.1"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.11.1"
 
     implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07"
