--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion 30
+    compileSdkVersion "android-S"
 
     defaultConfig {
         applicationId "com.omelan.cofi"
         minSdkVersion 23
-        targetSdkVersion 30
+        targetSdkVersion "S"
         versionCode 38
         versionName "1.1.1"
 
