--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,7 +135,7 @@ configurations {
 dependencies {
     ktlint "com.pinterest:ktlint:0.41.0"
 
-    instantImplementation('com.google.android.gms:play-services-instantapps:17.0.0')
+    instantImplementation('com.google.android.gms:play-services-instantapps:17.0.1')
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -146,18 +146,18 @@ dependencies {
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha02"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha03"
 //    implementation 'com.github.fornewid:material-motion-compose:0.4.7'
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
-    implementation 'com.google.accompanist:accompanist-insets:0.11.1'
-    implementation "com.google.accompanist:accompanist-flowlayout:0.11.1"
+    implementation 'com.google.accompanist:accompanist-insets:0.12.0'
+    implementation "com.google.accompanist:accompanist-flowlayout:0.12.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.11.1"
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-beta01"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha07"
-    implementation "androidx.activity:activity-compose:1.3.0-beta01"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
+    implementation "androidx.activity:activity-compose:1.3.0-beta02"
     //Room
     def room_version = "2.3.0"
 
