--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,6 +145,8 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:$compose_version"
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
+    implementation 'com.github.KieronQuinn:MonetCompat:0.1'
+    implementation 'androidx.palette:palette:1.0.0'
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-alpha03"
 //    implementation 'com.github.fornewid:material-motion-compose:0.4.7'
