--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:label="@string/app_name"
             android:launchMode="singleInstance"
             android:roundIcon="@mipmap/ic_launcher_round"
+            android:name=".CofiApp"
             android:supportsRtl="true"
             android:theme="@style/Theme.Cofi">
         <activity
