--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,12 +25,12 @@ android {
             storePassword keystoreProperties['storePassword']
         }
     }
-    compileSdkVersion "android-S"
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.omelan.cofi"
         minSdkVersion 23
-        targetSdkVersion "S"
+        targetSdkVersion 31
         versionCode 38
         versionName "1.1.1"
 
@@ -148,7 +148,7 @@ dependencies {
     implementation 'com.github.KieronQuinn:MonetCompat:0.1'
     implementation 'androidx.palette:palette:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha03"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha05"
 //    implementation 'com.github.fornewid:material-motion-compose:0.4.7'
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
@@ -159,7 +159,7 @@ dependencies {
 
     implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
-    implementation "androidx.activity:activity-compose:1.3.0-beta02"
+    implementation "androidx.activity:activity-compose:1.3.0-rc02"
     //Room
     def room_version = "2.3.0"
 
