--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,6 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerVersion "$kotlin_version"
         kotlinCompilerExtensionVersion "$compose_version"
     }
 
@@ -137,7 +136,7 @@ dependencies {
 
     instantImplementation('com.google.android.gms:play-services-instantapps:17.0.1')
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
@@ -157,9 +156,9 @@ dependencies {
     implementation "com.google.accompanist:accompanist-flowlayout:0.12.0"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.11.1"
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
-    implementation "androidx.activity:activity-compose:1.3.0-rc02"
+    implementation "androidx.datastore:datastore-preferences:1.0.0-rc02"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-beta01"
+    implementation "androidx.activity:activity-compose:1.3.0"
     //Room
     def room_version = "2.3.0"
 
