--- a/app/build.gradle
+++ b/app/build.gradle
@@ -137,7 +137,7 @@ dependencies {
 
     instantImplementation('com.google.android.gms:play-services-instantapps:17.0.1')
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_version"
     // Tooling support (Previews, etc.)
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
@@ -146,20 +146,20 @@ dependencies {
     // Material Design
     implementation "androidx.compose.material:material:$compose_version"
     implementation 'com.github.KieronQuinn:MonetCompat:0.1'
-    implementation 'androidx.palette:palette:1.0.0'
+    implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
-    implementation "androidx.navigation:navigation-compose:2.4.0-alpha05"
+    implementation "androidx.navigation:navigation-compose:2.4.0-alpha10"
 //    implementation 'com.github.fornewid:material-motion-compose:0.4.7'
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
     // Jetpack Utils
-    implementation 'com.google.accompanist:accompanist-insets:0.12.0'
-    implementation "com.google.accompanist:accompanist-flowlayout:0.12.0"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.11.1"
+    implementation 'com.google.accompanist:accompanist-insets:0.19.0'
+    implementation "com.google.accompanist:accompanist-flowlayout:0.19.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.19.0"
 
-    implementation "androidx.datastore:datastore-preferences:1.0.0-rc01"
-    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-alpha08"
-    implementation "androidx.activity:activity-compose:1.3.0-rc02"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.0-rc01"
+    implementation "androidx.activity:activity-compose:1.3.1"
     //Room
     def room_version = "2.3.0"
 
