--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.0-rc02'
-        kotlin_version = '1.5.10'
+        compose_version = '1.0.3'
+        kotlin_version = '1.5.30'
     }
     repositories {
         google()
@@ -10,7 +10,7 @@ buildscript {
         jcenter() // remove me after https://issues.sonatype.org/browse/OSSRH-64436 is
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.0-rc01'
+        classpath 'com.android.tools.build:gradle:7.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jaredsburrows:gradle-license-plugin:0.8.90'
         // NOTE: Do not place your application dependencies here; they belong
