--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
-        <activity android:name="androidx.activity.ComponentActivity" />
+        <activity android:name="androidx.activity.ComponentActivity"
+                android:exported="true"/>
     </application>
 </manifest>
