--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext {
-        compose_version = '1.0.4'
+        compose_version = '1.1.0-beta02'
         kotlin_version = '1.5.31'
     }
     repositories {
