Add German translation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ android {
                                       "$projectDir/schemas".toString()]
             }
         }
-        resConfigs "en", "pl", "it"
+        resConfigs "en", "pl", "it", "de"
 
     }
 
