--- a/app/build.gradle
+++ b/app/build.gradle
@@ -151,6 +151,8 @@ dependencies {
     implementation 'androidx.palette:palette-ktx:1.0.0'
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    // Webkit
+    implementation 'androidx.webkit:webkit:1.4.0'
 
     // Integration with observables
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
