--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ android {
                                       "$projectDir/schemas".toString()]
             }
         }
-        resConfigs "en", "pl", "it", "de"
+        resConfigs 'en', 'pl', 'it', 'de'
 
     }
 
@@ -97,20 +97,12 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion "$compose_version"
     }
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/license.txt'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/notice.txt'
-        exclude 'META-INF/ASL2.0'
-        exclude 'META-INF/AL2.0'
-        exclude 'META-INF/LGPL2.1'
-        exclude("META-INF/*.kotlin_module")
+        resources {
+            excludes += ['META-INF/DEPENDENCIES', 'META-INF/LICENSE', 'META-INF/LICENSE.txt', 'META-INF/license.txt', 'META-INF/NOTICE', 'META-INF/NOTICE.txt', 'META-INF/notice.txt', 'META-INF/ASL2.0', 'META-INF/AL2.0', 'META-INF/LGPL2.1', 'META-INF/*.kotlin_module']
+        }
     }
+
 
     sourceSets {
         // Adds exported schema location as test app assets.
