Check if debug builds

--- a/.github/workflows/size.yml
+++ b/.github/workflows/size.yml
@@ -21,7 +21,7 @@ jobs:
       run: chmod +x gradlew
 
     - name: Build PR app
-      run: ./gradlew assembleFullRelease
+      run: ./gradlew assembleFullDebug
     - name: Copy PR app
       run: cp ./app/build/outputs/apk/full/release/app-full-release.apk PR.apk
 
@@ -29,7 +29,7 @@ jobs:
       with:
         ref: main
     - name: Build main app
-      run: ./gradlew assembleFullRelease
+      run: ./gradlew assembleFullDebug
     - name: Copy PR app
       run: cp ./app/build/outputs/apk/full/release/app-full-release.apk main.apk
 
